--- a/Qwirkle-DD.csproj
+++ b/Qwirkle-DD.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BolsaFicha.cs" />
+    <Compile Include="Controllers\Jugador.cs" />
+    <Compile Include="Controllers\Tablero.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
