--- a/Qwirkle-DD.csproj
+++ b/Qwirkle-DD.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BolsaFicha.cs" />
+    <Compile Include="Controllers\Juego.cs" />
     <Compile Include="Controllers\Jugador.cs" />
     <Compile Include="Controllers\Tablero.cs" />
     <Compile Include="Form1.cs">
